# auth0-fastapi-example

./: .env.example  .gitignore  LICENSE  README.md  app.py  lint.sh  pyproject.toml
.github/workflows/: ci.yml
templates/: dashboard.html  index.html
