[project]
name = "auth0-fastapi-demo"
version = "0.1.0"
description = "FastAPI application with Auth0 Organizations integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "httpx==0.27.2",
    "SQLAlchemy==2.0.34",
    "python-jose[cryptography]==3.3.0",
    "pydantic==2.9.1",
    "pydantic-settings==2.3.4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true